# logre

./: .gitignore  LICENSE  README.md  pyproject.toml
src/logre/: __init__.py  console.py  const.py  filter.py  funcs.py  highlighter.py  level.py  record.py  typedefs.py
src/logre/_logger/: __init__.py  _base.py  _logger.py  _logger.pyi
src/logre/handler/: __init__.py  _base.py  _handler.py  base.py  render.py  traceback.py
src/logre/sink/: __init__.py  abc.py  callable.py  standard.py  typedefs.py
src/logre/sink/file/: _file.py
src/logre/style/: __init__.py  code.py  const.py  styles.py
src/logre/style/monokai_pro/: __init__.py  code.py  styles.py
