[project]
name = "logre"
version = "0.1.0"
description = "一个融合了Loguru的强大日志管理功能和Rich的华丽终端渲染的Python日志库。"
requires-python = ">=3.14"
dependencies = [
    "pydantic-settings>=2.13.0",
    "pygments>=2.19.2",
    "regex",
    "rich",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
