[project]
name = "logre"
version = "0.1.4."
description = "一个融合了Loguru的强大日志管理功能和Rich的华丽终端渲染的Python日志库。"
requires-python = ">=3.13"
dependencies = [
    "pydantic-settings>=2.13.0",
    "rich>=14.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ty.rules]
invalid-method-override = "ignore"
unresolved-import = "ignore"